--- a/AutoTile.GUI/Qwaitumin.AutoTile.GUI.csproj
+++ b/AutoTile.GUI/Qwaitumin.AutoTile.GUI.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Godot.NET.Sdk/4.4.1">
   <ItemGroup>
     <ProjectReference Include="..\AutoTile.GodotBindings\Qwaitumin.AutoTile.GodotBindings.csproj" />
-    <ProjectReference Include="..\Logging\Qwaitumin.Logging.csproj" />
+    <ProjectReference Include="..\modules\logging\Logging\Qwaitumin.Logging.csproj" />
   </ItemGroup>
 
   <PropertyGroup>
