--- a/LibreAutoTile.GUI/Qwaitumin.LibreAutoTile.GUI.csproj
+++ b/LibreAutoTile.GUI/Qwaitumin.LibreAutoTile.GUI.csproj
@@ -15,4 +15,10 @@
     <PublishAOT>true</PublishAOT>
     <EnableDynamicLoading>true</EnableDynamicLoading>
   </PropertyGroup>
+
+  <ItemGroup>
+    <!-- Root the assemblies to avoid trimming. -->
+    <TrimmerRootAssembly Include="GodotSharp" />
+    <TrimmerRootAssembly Include="$(TargetName)" />
+  </ItemGroup>
 </Project>
