more tests and more cleanup

--- a/LibreAutoTile.GUI/resources/configurations/ExampleConfiguration.json
+++ b/LibreAutoTile.GUI/resources/configurations/ExampleConfiguration.json
@@ -3,29 +3,28 @@
   "TileDefinitions": {
     "0": {
       "ImageFileNameToTileMaskDefinition": {
-        "../resources/Grass.png": {
-          "AtlasPositionToTileMasks": {}
-        },
+        "../resources/Grass.png": { "AtlasPositionToTileMasks": {} },
         "../resources/Fences.png": {
           "AtlasPositionToTileMasks": {
-            "(0,2,0)": [[-1, 0, -1, -1, -1, -1, -1, -1]],
             "(0,1,0)": [[-1, 0, -1, -1, -1, 0, -1, -1]],
-            "(1,3,0)": [[-1, -1, -1, 0, -1, -1, -1, -1]],
-            "(2,2,0)": [[0, 0, 0, 0, -1, -1, -1, 0]],
-            "(3,1,0)": [[0, 0, -1, -1, -1, 0, 0, 0]],
+            "(3,2,0)": [[-1, 0, -1, -1, -1, -1, -1, 0]],
+            "(2,1,0)": [[-1, 0, -1, 0, -1, 0, -1, 0]],
+            "(1,2,0)": [[-1, 0, -1, 0, -1, -1, -1, -1]],
+            "(0,2,0)": [[-1, 0, -1, -1, -1, -1, -1, -1]],
             "(2,3,0)": [[-1, -1, -1, 0, -1, -1, -1, 0]],
-            "(1,2,0)": [[-1, 0, 0, 0, -1, -1, -1, -1]],
-            "(3,0,0)": [[-1, -1, -1, -1, -1, 0, 0, 0]],
+            "(1,3,0)": [[-1, -1, -1, 0, -1, -1, -1, -1]],
             "(3,3,0)": [[-1, -1, -1, -1, -1, -1, -1, 0]],
-            "(3,2,0)": [[0, 0, -1, -1, -1, -1, -1, 0]],
-            "(2,1,0)": [[0, 0, 0, 0, 0, 0, 0, 0]],
+            "(2,0,0)": [[-1, -1, -1, 0, -1, 0, -1, 0]],
+            "(1,0,0)": [[-1, -1, -1, 0, -1, 0, -1, -1]],
+            "(2,2,0)": [[-1, 0, -1, 0, -1, -1, -1, 0]],
             "(0,3,0)": [[-1, -1, -1, -1, -1, -1, -1, -1]],
-            "(0,0,0)": [[-1, -1, -1, -1, -1, 0, -1, -1]],
-            "(2,0,0)": [[-1, -1, -1, 0, 0, 0, 0, 0]],
-            "(1,1,0)": [[-1, 0, 0, 0, 0, 0, -1, -1]],
-            "(1,0,0)": [[-1, -1, -1, 0, 0, 0, -1, -1]]
+            "(3,0,0)": [[-1, -1, -1, -1, -1, 0, -1, 0]],
+            "(1,1,0)": [[-1, 0, -1, 0, -1, 0, -1, -1]],
+            "(3,1,0)": [[-1, 0, -1, -1, -1, 0, -1, 0]],
+            "(0,0,0)": [[-1, -1, -1, -1, -1, 0, -1, -1]]
           }
-        }
+        },
+        "../resources/TwoSets.png": { "AtlasPositionToTileMasks": {} }
       },
       "Name": "Fence",
       "Color": "(150,218,181,178)"
@@ -34,63 +33,180 @@
       "ImageFileNameToTileMaskDefinition": {
         "../resources/Grass.png": {
           "AtlasPositionToTileMasks": {
-            "(0,2,0)": [[-1, 1, 1, 1, -1, -1, -1, -1]],
-            "(4,3,0)": [[-1, 1, -1, 1, -1, -1, -1, -1]],
-            "(1,4,0)": [[-1, -1, -1, 1, -1, -1, -1, 1]],
-            "(0,1,0)": [[-1, 1, 1, 1, 1, 1, -1, -1]],
-            "(6,2,0)": [[-1, 1, 1, 1, 1, 1, 1, 1]],
-            "(8,1,0)": [[1, 1, 1, 1, -1, 1, -1, 1]],
-            "(5,4,0)": [[1, 1, -1, 1, -1, 1, 1, 1]],
-            "(1,3,0)": [[-1, -1, -1, 1, -1, -1, -1, 1]],
-            "(5,3,0)": [[1, 1, -1, 1, -1, -1, -1, 1]],
-            "(8,2,0)": [[-1, 1, -1, 1, 1, 1, 1, 1]],
-            "(0,4,0)": [[-1, 1, -1, -1, -1, 1, -1, -1]],
-            "(6,0,0)": [[-1, -1, -1, 1, 1, 1, -1, 1]],
-            "(2,2,0)": [[1, 1, -1, -1, -1, -1, -1, 1]],
-            "(4,1,0)": [[-1, 1, 1, 1, -1, 1, -1, -1]],
-            "(9,4,0)": [[-1, 1, -1, 1, -1, 1, -1, 1]],
-            "(6,4,0)": [[-1, 1, 1, 1, 1, 1, -1, 1]],
-            "(9,0,0)": [[-1, 1, 1, 1, -1, 1, 1, 1]],
-            "(3,1,0)": [[-1, 1, -1, -1, -1, 1, -1, -1]],
-            "(7,3,0)": [[-1, 1, -1, -1, -1, -1, -1, 1]],
-            "(5,0,0)": [[-1, -1, -1, 1, -1, 1, 1, 1]],
-            "(2,3,0)": [[-1, -1, -1, -1, -1, -1, -1, 1]],
-            "(1,2,0)": [[1, 1, 1, 1, -1, -1, -1, 1]],
-            "(5,2,0)": [[1, 1, -1, 1, 1, 1, 1, 1]],
-            "(4,2,0)": [[-1, 1, -1, 1, 1, 1, -1, -1]],
-            "(7,2,0)": [[-1, 1, -1, -1, -1, 1, 1, 1]],
-            "(6,3,0)": [[-1, 1, 1, 1, -1, -1, -1, 1]],
-            "(3,0,0)": [[-1, -1, -1, -1, -1, 1, -1, -1]],
-            "(3,3,0)": [[-1, -1, -1, -1, -1, -1, -1, -1]],
-            "(7,0,0)": [[-1, -1, -1, -1, -1, 1, -1, 1]],
-            "(10,3,0)": [[1, 1, -1, 1, -1, 1, -1, 1]],
-            "(9,1,0)": [[1, 1, -1, 1, 1, 1, -1, 1]],
-            "(3,2,0)": [[-1, 1, -1, -1, -1, -1, -1, -1]],
-            "(8,0,0)": [[-1, -1, -1, 1, -1, 1, -1, 1]],
-            "(8,3,0)": [[-1, 1, -1, 1, -1, -1, -1, 1]],
-            "(6,1,0)": [[1, 1, 1, 1, 1, 1, -1, 1]],
-            "(2,1,0)": [[1, 1, -1, -1, -1, 1, 1, 1]],
-            "(0,3,0)": [[-1, -1, -1, 1, -1, -1, -1, -1]],
             "(7,4,0)": [[-1, 1, -1, -1, -1, 1, -1, 1]],
-            "(5,1,0)": [[1, 1, 1, 1, -1, 1, 1, 1]],
-            "(0,0,0)": [[-1, -1, -1, 1, 1, 1, -1, -1]],
-            "(9,3,0)": [[-1, 1, 1, 1, -1, 1, -1, 1]],
-            "(7,1,0)": [[1, 1, -1, -1, -1, 1, -1, 1]],
-            "(2,0,0)": [[-1, -1, -1, -1, -1, 1, 1, 1]],
+            "(7,0,0)": [[-1, -1, -1, -1, -1, 1, -1, 1]],
+            "(7,3,0)": [[-1, 1, -1, -1, -1, -1, -1, 1]],
+            "(0,1,0)": [[-1, 1, 1, 1, 1, 1, -1, -1]],
+            "(3,2,0)": [[-1, 1, -1, -1, -1, -1, -1, -1]],
+            "(6,1,0)": [[1, 1, 1, 1, 1, 1, -1, 1]],
+            "(4,1,0)": [[-1, 1, 1, 1, -1, 1, -1, -1]],
+            "(4,4,0)": [[-1, 1, -1, 1, -1, 1, -1, -1]],
             "(10,2,0)": [[-1, 1, -1, 1, -1, 1, 1, 1]],
-            "(1,1,0)": [[1, 1, 1, 1, 1, 1, 1, 1]],
-            "(1,0,0)": [[-1, -1, -1, 1, 1, 1, 1, 1]],
+            "(2,1,0)": [[1, 1, -1, -1, -1, 1, 1, 1]],
+            "(9,3,0)": [[-1, 1, 1, 1, -1, 1, -1, 1]],
+            "(1,2,0)": [[1, 1, 1, 1, -1, -1, -1, 1]],
+            "(6,0,0)": [[-1, -1, -1, 1, 1, 1, -1, 1]],
+            "(0,2,0)": [[-1, 1, 1, 1, -1, -1, -1, -1]],
+            "(8,3,0)": [[-1, 1, -1, 1, -1, -1, -1, 1]],
+            "(5,2,0)": [[1, 1, -1, 1, 1, 1, 1, 1]],
+            "(5,4,0)": [[1, 1, -1, 1, -1, 1, 1, 1]],
             "(4,0,0)": [[-1, -1, -1, 1, -1, 1, -1, -1]],
             "(9,2,0)": [[-1, 1, -1, 1, 1, 1, -1, 1]],
-            "(4,4,0)": [[-1, 1, -1, 1, -1, 1, -1, -1]]
+            "(2,3,0)": [[-1, -1, -1, -1, -1, -1, -1, 1]],
+            "(6,2,0)": [[-1, 1, 1, 1, 1, 1, 1, 1]],
+            "(5,1,0)": [[1, 1, 1, 1, -1, 1, 1, 1]],
+            "(1,3,0)": [[-1, -1, -1, 1, -1, -1, -1, 1]],
+            "(3,3,0)": [[-1, -1, -1, -1, -1, -1, -1, -1]],
+            "(5,3,0)": [[1, 1, -1, 1, -1, -1, -1, 1]],
+            "(1,4,0)": [[-1, -1, -1, 1, -1, -1, -1, 1]],
+            "(6,3,0)": [[-1, 1, 1, 1, -1, -1, -1, 1]],
+            "(2,0,0)": [[-1, -1, -1, -1, -1, 1, 1, 1]],
+            "(6,4,0)": [[-1, 1, 1, 1, 1, 1, -1, 1]],
+            "(8,1,0)": [[1, 1, 1, 1, -1, 1, -1, 1]],
+            "(9,0,0)": [[-1, 1, 1, 1, -1, 1, 1, 1]],
+            "(8,2,0)": [[-1, 1, -1, 1, 1, 1, 1, 1]],
+            "(9,4,0)": [[-1, 1, -1, 1, -1, 1, -1, 1]],
+            "(1,0,0)": [[-1, -1, -1, 1, 1, 1, 1, 1]],
+            "(9,1,0)": [[1, 1, -1, 1, 1, 1, -1, 1]],
+            "(8,0,0)": [[-1, -1, -1, 1, -1, 1, -1, 1]],
+            "(5,0,0)": [[-1, -1, -1, 1, -1, 1, 1, 1]],
+            "(7,2,0)": [[-1, 1, -1, -1, -1, 1, 1, 1]],
+            "(4,3,0)": [[-1, 1, -1, 1, -1, -1, -1, -1]],
+            "(4,2,0)": [[-1, 1, -1, 1, 1, 1, -1, -1]],
+            "(2,2,0)": [[1, 1, -1, -1, -1, -1, -1, 1]],
+            "(0,3,0)": [[-1, -1, -1, 1, -1, -1, -1, -1]],
+            "(3,0,0)": [[-1, -1, -1, -1, -1, 1, -1, -1]],
+            "(7,1,0)": [[1, 1, -1, -1, -1, 1, -1, 1]],
+            "(10,3,0)": [[1, 1, -1, 1, -1, 1, -1, 1]],
+            "(0,4,0)": [[-1, 1, -1, -1, -1, 1, -1, -1]],
+            "(1,1,0)": [[1, 1, 1, 1, 1, 1, 1, 1]],
+            "(3,1,0)": [[-1, 1, -1, -1, -1, 1, -1, -1]],
+            "(0,0,0)": [[-1, -1, -1, 1, 1, 1, -1, -1]]
           }
         },
-        "../resources/Fences.png": {
-          "AtlasPositionToTileMasks": {}
-        }
+        "../resources/Fences.png": { "AtlasPositionToTileMasks": {} },
+        "../resources/TwoSets.png": { "AtlasPositionToTileMasks": {} }
       },
       "Name": "Grass",
       "Color": "(167,58,145,178)"
+    },
+    "2": {
+      "ImageFileNameToTileMaskDefinition": {
+        "../resources/Grass.png": { "AtlasPositionToTileMasks": {} },
+        "../resources/Fences.png": { "AtlasPositionToTileMasks": {} },
+        "../resources/TwoSets.png": {
+          "AtlasPositionToTileMasks": {
+            "(7,4,0)": [[-1, 2, -1, 2, -1, -1, -1, 2]],
+            "(4,5,0)": [[-1, 2, -1, 2, -1, -1, -1, -1]],
+            "(7,0,0)": [[-1, 2, -1, 2, -1, 2, -1, 2]],
+            "(7,3,0)": [[2, 2, -1, 2, -1, 2, 2, 2]],
+            "(0,1,0)": [[-1, 2, 2, 2, 2, 2, -1, -1]],
+            "(3,2,0)": [[-1, 2, -1, -1, -1, -1, -1, -1]],
+            "(6,1,0)": [[-1, 2, 2, 2, -1, 2, 2, 2]],
+            "(4,1,0)": [[2, 2, -1, 2, 2, 2, 2, 2]],
+            "(4,4,0)": [[-1, -1, -1, 2, -1, 2, -1, -1]],
+            "(2,1,0)": [[2, 2, -1, -1, -1, 2, 2, 2]],
+            "(5,5,0)": [[-1, 2, -1, -1, -1, -1, -1, 2]],
+            "(1,2,0)": [[2, 2, 2, 2, -1, -1, -1, 2]],
+            "(0,2,0)": [[-1, 2, 2, 2, -1, -1, -1, -1]],
+            "(5,2,0)": [[2, 2, -1, 2, -1, 2, 2, 2]],
+            "(5,4,0)": [[-1, -1, -1, -1, -1, 2, -1, 2]],
+            "(1,5,0)": [[-1, 2, 2, 2, -1, -1, -1, 2]],
+            "(4,0,0)": [[2, 2, 2, 2, -1, 2, 2, 2]],
+            "(2,5,0)": [[-1, 2, -1, 2, 2, 2, -1, -1]],
+            "(2,3,0)": [[-1, -1, -1, -1, -1, -1, -1, 2]],
+            "(0,5,0)": [[2, 2, -1, 2, -1, -1, -1, 2]],
+            "(7,5,0)": [[-1, 2, -1, -1, -1, 2, -1, 2]],
+            "(6,2,0)": [[-1, 2, -1, 2, 2, 2, -1, 2]],
+            "(5,1,0)": [[-1, 2, 2, 2, 2, 2, 2, 2]],
+            "(1,3,0)": [[-1, -1, -1, 2, -1, -1, -1, 2]],
+            "(3,3,0)": [[-1, -1, -1, -1, -1, -1, -1, -1]],
+            "(5,3,0)": [[-1, 2, 2, 2, 2, 2, -1, 2]],
+            "(6,5,0)": [[-1, 2, -1, 2, -1, 2, -1, -1]],
+            "(1,4,0)": [[-1, -1, -1, 2, 2, 2, -1, 2]],
+            "(6,3,0)": [[-1, 2, 2, 2, 2, 2, -1, 2]],
+            "(2,0,0)": [[-1, -1, -1, -1, -1, 2, 2, 2]],
+            "(6,4,0)": [[-1, -1, -1, 2, -1, 2, -1, 2]],
+            "(3,5,0)": [[-1, 2, -1, -1, -1, 2, 2, 2]],
+            "(3,4,0)": [[2, 2, -1, -1, -1, 2, -1, 2]],
+            "(1,0,0)": [[-1, -1, -1, 2, 2, 2, 2, 2]],
+            "(5,0,0)": [[2, 2, 2, 2, 2, 2, -1, 2]],
+            "(7,2,0)": [[-1, 2, -1, 2, -1, 2, 2, 2]],
+            "(4,3,0)": [[2, 2, 2, 2, -1, 2, -1, 2]],
+            "(4,2,0)": [[-1, 2, -1, 2, 2, 2, 2, 2]],
+            "(2,2,0)": [[2, 2, -1, -1, -1, -1, -1, 2]],
+            "(0,3,0)": [[-1, -1, -1, 2, -1, -1, -1, -1]],
+            "(3,0,0)": [[-1, -1, -1, -1, -1, 2, -1, -1]],
+            "(7,1,0)": [[2, 2, -1, 2, 2, 2, -1, 2]],
+            "(0,4,0)": [[-1, -1, -1, 2, -1, 2, 2, 2]],
+            "(1,1,0)": [[2, 2, 2, 2, 2, 2, 2, 2]],
+            "(3,1,0)": [[-1, 2, -1, -1, -1, 2, -1, -1]],
+            "(2,4,0)": [[-1, 2, 2, 2, -1, 2, -1, -1]],
+            "(0,0,0)": [[-1, -1, -1, 2, 2, 2, -1, -1]]
+          }
+        }
+      },
+      "Name": "Wall1",
+      "Color": "(255,0,216,178)"
+    },
+    "3": {
+      "ImageFileNameToTileMaskDefinition": {
+        "../resources/Grass.png": { "AtlasPositionToTileMasks": {} },
+        "../resources/Fences.png": { "AtlasPositionToTileMasks": {} },
+        "../resources/TwoSets.png": {
+          "AtlasPositionToTileMasks": {
+            "(13,1,0)": [[-1, 3, 3, 3, 3, 3, 3, 3]],
+            "(15,1,0)": [[3, 3, -1, 3, 3, 3, -1, 3]],
+            "(8,5,0)": [[3, 3, -1, 3, -1, -1, -1, 3]],
+            "(14,2,0)": [[-1, 3, -1, 3, 3, 3, -1, 3]],
+            "(11,0,0)": [[-1, -1, -1, -1, -1, 3, -1, -1]],
+            "(10,2,0)": [[3, 3, -1, -1, -1, -1, -1, 3]],
+            "(13,3,0)": [[-1, 3, 3, 3, 3, 3, -1, 3]],
+            "(11,2,0)": [[-1, 3, -1, -1, -1, -1, -1, -1]],
+            "(14,5,0)": [[-1, 3, -1, 3, -1, 3, -1, -1]],
+            "(12,3,0)": [[3, 3, 3, 3, -1, 3, -1, 3]],
+            "(9,3,0)": [[-1, -1, -1, 3, -1, -1, -1, 3]],
+            "(14,1,0)": [[-1, 3, 3, 3, -1, 3, 3, 3]],
+            "(13,5,0)": [[-1, 3, -1, -1, -1, -1, -1, 3]],
+            "(13,4,0)": [[-1, -1, -1, -1, -1, 3, -1, 3]],
+            "(8,3,0)": [[-1, -1, -1, 3, -1, -1, -1, -1]],
+            "(11,3,0)": [[-1, -1, -1, -1, -1, -1, -1, -1]],
+            "(9,2,0)": [[3, 3, 3, 3, -1, -1, -1, 3]],
+            "(11,4,0)": [[3, 3, -1, -1, -1, 3, -1, 3]],
+            "(8,4,0)": [[-1, -1, -1, 3, -1, 3, 3, 3]],
+            "(11,1,0)": [[-1, 3, -1, -1, -1, 3, -1, -1]],
+            "(15,5,0)": [[-1, 3, -1, -1, -1, 3, -1, 3]],
+            "(13,2,0)": [[3, 3, -1, 3, -1, 3, 3, 3]],
+            "(12,4,0)": [[-1, -1, -1, 3, -1, 3, -1, -1]],
+            "(10,0,0)": [[-1, -1, -1, -1, -1, 3, 3, 3]],
+            "(10,1,0)": [[3, 3, -1, -1, -1, 3, 3, 3]],
+            "(8,1,0)": [[-1, 3, 3, 3, 3, 3, -1, -1]],
+            "(9,0,0)": [[-1, -1, -1, 3, 3, 3, 3, 3]],
+            "(10,4,0)": [[-1, 3, 3, 3, -1, 3, -1, -1]],
+            "(15,3,0)": [[3, 3, -1, 3, -1, 3, -1, 3]],
+            "(12,5,0)": [[-1, 3, -1, 3, -1, -1, -1, -1]],
+            "(14,3,0)": [[-1, 3, 3, 3, -1, 3, -1, 3]],
+            "(8,2,0)": [[-1, 3, 3, 3, -1, -1, -1, -1]],
+            "(9,4,0)": [[-1, -1, -1, 3, 3, 3, -1, 3]],
+            "(9,1,0)": [[3, 3, 3, 3, 3, 3, 3, 3]],
+            "(14,4,0)": [[-1, -1, -1, 3, -1, 3, -1, 3]],
+            "(15,4,0)": [[-1, 3, -1, 3, -1, -1, -1, 3]],
+            "(8,0,0)": [[-1, -1, -1, 3, 3, 3, -1, -1]],
+            "(12,2,0)": [[-1, 3, -1, 3, 3, 3, 3, 3]],
+            "(15,0,0)": [[-1, 3, -1, 3, -1, 3, -1, 3]],
+            "(12,0,0)": [[3, 3, 3, 3, -1, 3, 3, 3]],
+            "(12,1,0)": [[3, 3, -1, 3, 3, 3, 3, 3]],
+            "(13,0,0)": [[3, 3, 3, 3, 3, 3, -1, 3]],
+            "(15,2,0)": [[-1, 3, -1, 3, -1, 3, 3, 3]],
+            "(10,3,0)": [[-1, -1, -1, -1, -1, -1, -1, 3]],
+            "(10,5,0)": [[-1, 3, -1, 3, 3, 3, -1, -1]],
+            "(11,5,0)": [[-1, 3, -1, -1, -1, 3, 3, 3]],
+            "(9,5,0)": [[-1, 3, 3, 3, -1, -1, -1, 3]]
+          }
+        }
+      },
+      "Name": "Wall2",
+      "Color": "(251,3,3,178)"
     }
   }
 }
