--- a/LibreAutoTile.Benchmarks/Qwaitumin.LibreAutoTile.Benchmark.csproj
+++ b/LibreAutoTile.Benchmarks/Qwaitumin.LibreAutoTile.Benchmark.csproj
@@ -11,6 +11,7 @@
     <Nullable>enable</Nullable>
     <LangVersion>12.0</LangVersion>
     <NoWarn>NU1605;IDE0130</NoWarn>
+    <RootNamespace>Qwaitumin.LibreAutoTile.Benchmarks</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
