--- a/LibreAutoTile/Qwaitumin.LibreAutoTile.csproj
+++ b/LibreAutoTile/Qwaitumin.LibreAutoTile.csproj
@@ -7,6 +7,7 @@
     <LangVersion>12.0</LangVersion>
     <NoWarn>NU1605;IDE0130</NoWarn>
     <IsAotCompatible>true</IsAotCompatible>
+    <RootNamespace>Qwaitumin.LibreAutoTile</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
