Adding tests and build scripts

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -7,7 +7,7 @@ on:
     branches: ["main"]
 
 jobs:
-  build:
+  test-native:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -24,3 +24,16 @@ jobs:
       - name: Run LibreAutoTile.Tests
         run: dotnet run --no-build
         working-directory: LibreAutoTile.Tests
+
+  test-godot:
+    runs-on: barichello/godot-ci:mono-4.4.1
+    needs: test-native
+    steps:
+      - uses: actions/checkout@v4
+      - name: Setup .NET
+        uses: actions/setup-dotnet@v4
+        with:
+          dotnet-version: 9.0.x
+      - name: Run LibreAutoTile.GodotBindings.Tests
+        run: run-tests.sh
+        working-directory: LibreAutoTile.GodotBindings.Tests
