--- a/LibreAutoTile.GUI/Qwaitumin.LibreAutoTile.GUI.csproj
+++ b/LibreAutoTile.GUI/Qwaitumin.LibreAutoTile.GUI.csproj
@@ -10,6 +10,7 @@
     <RootNamespace>Qwaitumin.LibreAutoTile.GUI</RootNamespace>
     <Nullable>enable</Nullable>
     <NoWarn>IDE0130;NU1605</NoWarn>
+    <!-- Cross platfor AOT is not supported. -->
     <PublishAOT>true</PublishAOT>
     <EnableDynamicLoading>true</EnableDynamicLoading>
   </PropertyGroup>
