--- a/LibreAutoTile.GUI/export_presets.cfg
+++ b/LibreAutoTile.GUI/export_presets.cfg
@@ -9,7 +9,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="../../../exports/Qwaitumin.LibreAutoTile.GUI.x86_64"
+export_path=""
 patches=PackedStringArray()
 encryption_include_filters=""
 encryption_exclude_filters=""
@@ -48,7 +48,7 @@ dotnet/embed_build_outputs=false
 name="Windows Desktop"
 platform="Windows Desktop"
 runnable=true
-advanced_options=false
+advanced_options=true
 dedicated_server=false
 custom_features=""
 export_filter="all_resources"
