--- a/LibreAutoTile.GUI/export_presets.cfg
+++ b/LibreAutoTile.GUI/export_presets.cfg
@@ -7,7 +7,7 @@ advanced_options=true
 dedicated_server=false
 custom_features=""
 export_filter="all_resources"
-include_filter=""
+include_filter="*.json"
 exclude_filter=""
 export_path=""
 patches=PackedStringArray()
@@ -52,7 +52,7 @@ advanced_options=true
 dedicated_server=false
 custom_features=""
 export_filter="all_resources"
-include_filter=""
+include_filter="*json, *ttf"
 exclude_filter=""
 export_path="../../../exports/Qwaitumin.LibreAutoTile.GUI.exe"
 patches=PackedStringArray()
